# datafusion

./: Cargo.toml
datafusion-cli/: Dockerfile
datafusion-examples/examples/: csv_sql_streaming.rs
datafusion/core/src/dataframe/: mod.rs
datafusion/expr/src/logical_plan/: builder.rs
datafusion/substrait/tests/cases/: mod.rs
operator/: Cargo.toml  rustfmt.toml
operator/src/: lib.rs
