[package]
authors.workspace      = true
edition.workspace      = true
homepage.workspace     = true
license.workspace      = true
name                   = "operator"
readme.workspace       = true
repository.workspace   = true
rust-version.workspace = true
version.workspace      = true

[dependencies]
async-trait = {workspace = true}
datafusion  = {workspace = true}
